--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~
+    working_directory: ~/test
     docker:
       - image: circleci/python:3.5.3
     steps:
